# ppt2video

./: .gitignore  README.md  pyproject.toml
ppt2video/: __main__.py
