[tool.poetry]
name = "ppt2video"
version = "0.1.0"
description = ""
authors = ["JaHIY"]
readme = "README.md"
packages = [{include = "ppt2video"}]

[tool.poetry.dependencies]
python = "^3.11"
pymupdf = "^1.23.6"
edge-tts = "^6.1.9"
python-pptx = "^0.6.23"
loguru = "^0.7.2"


[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "default"
