[project]
authors = [
    {name = "JaHIY"},
]
requires-python = "<4.0,>=3.11"
dependencies = [
    "python-pptx>=1.0.2",
    "loguru>=0.7.3",
    "edge-tts>=7.0.2",
    "pymupdf>=1.26.3",
]
name = "ppt2video"
version = "0.1.0"
description = ""
readme = "README.md"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
